Fixed bug for video not aligning to top of screen

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,7 +105,7 @@ html {
     
     top: 46%;
     left: 50%;
-    transform: translate(-50%, -45%);
+    transform: translate(-50%, -46%);
 
     z-index: 0;
 
